small cleanups
